# notdb

./: .gitignore  LICENSE.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
src/notdb/: _build.py
