[metadata]
name = notdb
version = 0.1.0
description = Pythonic bindings for the notmuch email database using CFFI
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
url = https://github.com/flub/notdb
author = Floris Bruynooghe
author_email = flub@devork.be
license = GPL
license_file = LICENSE
keywords = email notmuch cffi
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: DFSG approved
    License :: OSI Approved :: GNU General Puclic License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Communications :: Email
    Topic :: Software Development :: Libraries
platforms = unix, linux

[options]
package_dir =
    = src
packages = find:
install_requires =
    cffi >= 1.0.0

[options.packages.find]
where = src
exclude = tests